; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_posixsem_check_setowner.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_posixsem_check_setowner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { %struct.label* }
%struct.ksem = type { i32 }
%struct.label = type { i32 }

@MAGIC_CRED = common dso_local global i32 0, align 4
@MAGIC_POSIX_SHM = common dso_local global i32 0, align 4
@posixsem_check_setowner = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ucred*, %struct.ksem*, %struct.label*, i32, i32)* @test_posixsem_check_setowner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_posixsem_check_setowner(%struct.ucred* %0, %struct.ksem* %1, %struct.label* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.ucred*, align 8
  %7 = alloca %struct.ksem*, align 8
  %8 = alloca %struct.label*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.ucred* %0, %struct.ucred** %6, align 8
  store %struct.ksem* %1, %struct.ksem** %7, align 8
  store %struct.label* %2, %struct.label** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.ucred*, %struct.ucred** %6, align 8
  %12 = getelementptr inbounds %struct.ucred, %struct.ucred* %11, i32 0, i32 0
  %13 = load %struct.label*, %struct.label** %12, align 8
  %14 = load i32, i32* @MAGIC_CRED, align 4
  %15 = call i32 @LABEL_CHECK(%struct.label* %13, i32 %14)
  %16 = load %struct.label*, %struct.label** %8, align 8
  %17 = load i32, i32* @MAGIC_POSIX_SHM, align 4
  %18 = call i32 @LABEL_CHECK(%struct.label* %16, i32 %17)
  %19 = load i32, i32* @posixsem_check_setowner, align 4
  %20 = call i32 @COUNTER_INC(i32 %19)
  ret i32 0
}

declare dso_local i32 @LABEL_CHECK(%struct.label*, i32) #1

declare dso_local i32 @COUNTER_INC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
